# sentinel-framework

./: .gitignore  API.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  ENHANCEMENTS.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  VISUAL_ASSETS_GUIDE.md  WELCOME.txt  WINDOWS_COMPATIBILITY.md  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.bat  setup.py  setup.sh  test_comprehensive.py  test_installation.py
config/: sentinel.yaml
examples/: __init__.py  custom_detector.py  realtime_monitoring.py  simple_analysis.py
sentinel/: __init__.py  __main__.py  cli.py  config.py
sentinel/analyzers/: __init__.py  archive_analyzer.py  deep_pe_analyzer.py  document_analyzer.py  file_type_detector.py  string_extractor.py
sentinel/core/: __init__.py  analyzer.py  events.py  monitor.py  reporter.py  sandbox.py  threat_scoring.py
sentinel/detectors/: __init__.py  c2.py  comprehensive.py  evasion.py  injection.py  persistence.py  ransomware.py  trojan.py
sentinel/forensics/: __init__.py  filesystem_forensics.py  memory_forensics.py  network_forensics.py
sentinel/monitors/: __init__.py  filesystem.py  network.py  process.py  registry.py
sentinel/ui/: __init__.py  rich_display.py
sentinel/utils/: helpers.py  logger.py
tests/: __init__.py  test_core.py
